fix z-index across all home page and add hover and active view of buttons

--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -1,7 +1,5 @@
 .home {
     background: #01000F;
-    position: relative;
-    z-index: -1;
 }
 
 .container-home {
@@ -18,7 +16,7 @@
     line-height: 112.4%;
     letter-spacing: 0.095em;
     text-transform: uppercase;
-    z-index: 100;
+    z-index: 0;
     margin-top: 135px;
     max-width: 481px;
     -webkit-text-stroke: 3px #00D1FF;
@@ -33,19 +31,19 @@
 .big-logo-photo-line {
     left: -35px;
     position: relative;
-    z-index: 100;
+    z-index: 0;
     bottom: 212px;
 }
 
 .logo-section {
     position: relative;
-    z-index: 2;
+    z-index: 0;
     height: 100px;
 }
 
 .big-photo-inner {
     position: absolute;
-    z-index: 11111;
+    z-index: 0;
     left: 247px;
     top: -23px;
 }
@@ -65,7 +63,7 @@
     transform: rotate(77.17deg);
     width: 652px;
     position: absolute;
-    z-index: 3;
+    z-index: 0;
     height: 749px;
     left: 92px;
     top: -127px;
@@ -164,7 +162,7 @@
 .big-logo-photo {
     position: relative;
     top: 217px;
-    z-index: 989898989898;
+    z-index: 0;
 }
 
 .studies-stwork {
@@ -255,7 +253,7 @@ h2.subject-support-title {
 .studies-aside {
     display: flex;
     position: relative;
-    z-index: 2;
+    z-index: 0;
 }
 
 .studies-description {
@@ -362,7 +360,7 @@ h2.asnwer-question-title {
     position: relative;
     display: flex;
     justify-content: space-between;
-    z-index: 2;
+    z-index: 0;
 }
 
 .how-it-work-photo-bg {
@@ -429,7 +427,7 @@ h2.asnwer-question-title {
     width: 100%;
     margin: 0 auto;
     position: relative;
-    z-index: 2;
+    z-index: 0;
 }
 
 .home__body-slider {
@@ -445,7 +443,7 @@ h2.asnwer-question-title {
 .home__body-slider .slick-prev {
     position: absolute;
     bottom: 11.5%;
-    z-index: 9;
+    z-index: 0;
     background: transparent;
     border: unset;
     font-size: 0;
@@ -493,7 +491,7 @@ h2.asnwer-question-title {
     border-top-left-radius: 30px;
     border-bottom-right-radius: 30px;
     position: absolute;
-    z-index: 999;
+    z-index: 0;
     bottom: 0;
     left: 130px;
 }
@@ -542,7 +540,7 @@ h2.asnwer-question-title {
     display: flex;
     justify-content: space-between;
     position: relative;
-    z-index: 2;
+    z-index: 0;
 }
 
 .more-subjects {
@@ -584,7 +582,7 @@ h2.asnwer-question-title {
     display: flex;
     justify-content: right;
     position: relative;
-    z-index: 2;
+    z-index: 0;
 }
 
 .how-it-work-second {
@@ -634,7 +632,7 @@ h2.asnwer-question-title {
     margin: 280px auto 0 auto;
     height: 850px;
     position: relative;
-    z-index: 2;
+    z-index: 0;
 }
 
 .title-elipce-student-help {
@@ -747,7 +745,7 @@ h2.asnwer-question-title {
     display: flex;
     justify-content: space-between;
     position: relative;
-    z-index: 2;
+    z-index: 0;
 }
 
 .asnwer-question-col:last-child {
@@ -890,7 +888,7 @@ h2.subject-support-title {
     display: flex;
     align-items: center;
     position: relative;
-    z-index: 2;
+    z-index: 0;
 }
 
 .photoman-photo img {
@@ -937,6 +935,23 @@ img.lessons-direction-img {
     width: 100%;
     height: 100%;
     box-shadow: 0px 11px 42px 19px rgba(0, 0, 0, 0.2);
+}
+
+.studies__details-inner button:hover,
+.repetitors__details-inner button:hover {
+    background: #572370;
+    border: 1px solid #F6E3FF;
+    cursor: pointer;
+    box-shadow: -2px -2px 7px rgba(182, 27, 255, 0.8), 2px 2px 7px rgba(182, 27, 255, 0.8), 2px -2px 7px rgba(172, 0, 253, 0.8), -2px 2px 7px rgba(182, 27, 255, 0.8);
+}
+
+.studies__details-inner button:active,
+.repetitors__details-inner button:active {
+    background: #39104D;
+    border: 1px solid #F6E3FF;
+    box-shadow: -2px -2px 4px rgba(182, 27, 255, 0.6), 2px 2px 4px rgba(182, 27, 255, 0.6), 2px -2px 4px rgba(172, 0, 253, 0.6), -2px 2px 4px rgba(182, 27, 255, 0.6);
+    border-radius: 40px;
+    color: #A151C7;
 }
 
 @media (max-width: 1010px) {
@@ -1070,7 +1085,7 @@ img.lessons-direction-img {
     h2.how-it-work__title,
     h2.asnwer-question-title {
         font-size: 40px;
-        z-index: 3;
+        z-index: 0;
         position: relative;
     }
     .plan-count {
@@ -1095,7 +1110,7 @@ img.lessons-direction-img {
         width: 338px;
         height: 498px;
         position: relative;
-        z-index: 999;
+        z-index: 0;
         background-position: -8px -69px;
     }
     .how-it-work-inner {
@@ -1176,7 +1191,7 @@ img.lessons-direction-img {
         width: 968px;
         margin: 0 auto 0 auto;
         position: relative;
-        z-index: 3;
+        z-index: 0;
     }
     .cool-man-wrapper {
         right: 200px;
